--- a/style.css
+++ b/style.css
@@ -9,11 +9,20 @@ h1 {
 
 nav {
   font-size: 1.5em;
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  flex: 1;
+  max-width: 50%;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 ul,
 li {
-  display: inline;
+  display: inline-flex;
   margin: 0;
   padding: 0;
 }
@@ -66,7 +75,7 @@ li {
 } */
 
 /* Also possible to do it this way */
-h1 {
+/* h1 {
   color: red;
 }
 
@@ -85,5 +94,23 @@ h1 {
 @media (min-width: 1200px) {
   h1 {
     color: orangered;
+  }
+} */
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 4em;
+  }
+
+  nav,
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 3em;
   }
 }
